--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,12 +4,12 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 back_cont">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 npm">
             <figure>
                 <%= image_tag(@article.image.url(:large))%>
             </figure>
         </div> 
-<article class="container_fluid test_wrap padding-bottom8"> 
+<article class="container_fluid test_wrap npm padding-bottom8"> 
 
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50p1 fixed_blog"><br><br><br><br><br>
         <div class="container_social_share">
@@ -32,16 +32,16 @@
 
                     <hr class="article_show_hr">
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 npm">
                 <figure class="user_avatar"><%= image_tag('mijtest.JPG')%></figure>
                 </div>
 
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 pull-right">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 pull-right npm">
                     <h6>by YSR <br><br>Twitter handle</h6>
                 </div>     
 
 
-                <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><br><%= @article.content %></p>
+                <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 npm"><br><%= @article.content %></p>
                           
         </div>
 
