--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 npm">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <figure>
                 <%= image_tag(@article.image.url(:large))%>
             </figure>
@@ -17,7 +17,7 @@
         </div>
 
 
-        <div class="col-lg-6 col-md-7 col-sm-7 col-xs-11 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-1">
+        <div class="col-lg-6 col-md-7 col-sm-7 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0">
             <% if user_signed_in? %>
             <p class="pull-right"><%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "black" %>
             <%= link_to 'Edit', edit_article_path(@article), class: "black" %>
@@ -45,7 +45,7 @@
                           
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-5 col-xs-11 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1">
+        <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
             <div class="subscribe_container bgb">
                 <h1 class="white alignright">Subscribe voor Exclusieve content.</h1>
                 <div class="white subform_wrapper"><%=render('shared/sub_form')%><br></div>
