--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -13,7 +13,7 @@
         <div class="row full_width col-centered">
 
 
-            <div class="col-lg-8 col-md-7 col-sm-12 col-xs-12 overlay_figure" onmousedown="toggleOverlay()">
+            <div class="col-lg-8 col-md-7 col-sm-12 col-xs-12 overlay_figure npm" onmousedown="toggleOverlay()">
         
                 <button class="button_container "><%=image_tag('play_icon2.png', class: "play_icon1 place_middle")%></button>
                 <figure class="story_figuur">
@@ -23,7 +23,7 @@
             </div> 
 
 
-            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12 npm">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h6 class="blog_tag">#<%= @story_last.tag %></h6>
                     <h2 class="blog_titel silverHover"><%= link_to @story_last.title, story_path(@story_last), class: "black"%></h2>
