--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -4,7 +4,7 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 back_cont">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 back_cont npm">
             <figure>
                 <%= image_tag(@story.image.url(:large))%>
             </figure>
@@ -17,7 +17,7 @@
         </div>
 
 
-        <div class="col-lg-6 col-md-7 col-sm-7 col-xs-11 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-1">
+        <div class="col-lg-6 col-md-7 col-sm-7 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0">
             <% if user_signed_in? %>
             <p class="pull-right">
             <%= link_to 'Destroy', story_path(@story), method: :delete, data: { confirm: 'Are you sure?' }, class: "black" %>
@@ -31,7 +31,7 @@
                 <p class="bold"><%= @story.created_at.strftime("%d %b. %Y") %> - <%= @story.consumeTime %> min read</p>
                 <hr class="article_show_hr">
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 npm">
                 <figure class="user_avatar"><%= image_tag('mijtest.JPG')%></figure>
                 </div>
 
@@ -39,11 +39,11 @@
                     <h6>by YSR <br><br>Twitter handle</h6>
                 </div>     
                 
-                <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><br><%= @story.content %></p>
+                <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 npm"><br><%= @story.content %></p>
                           
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-5 col-xs-11 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1">
+        <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
             <div class="subscribe_container bgb">
                 <h1 class="white alignright">Subscribe voor Exclusieve content.</h1>
                 <div class="white subform_wrapper"><%=render('shared/sub_form')%><br></div>
