--- a/app/views/pages/over_ons.html.erb
+++ b/app/views/pages/over_ons.html.erb
@@ -2,7 +2,7 @@
 
 <article class="container_fluid">
     <div class="full_width overons_landing">
-        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Peoneer staat voor digitale marketing en innovatie</h2>
+        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Peoneer staat voor transformatie, innovatie en vooruitgang</h2>
     </div> 
 
     <div class="full_width" style="height: 30em;">
@@ -10,29 +10,29 @@
         </figure>
 
         <div class="col-lg-8 col-md-8 col-sm-8 hidden-xs container_overons_gm">
-            <h2 class="inline overonsh3">test1 titel</h2>
-            <p class="inline ">test1 tekst</p><br>
-            <h2 class="inline overonsh3">test2 titel</h2>
+            <h2 class="inline overonsh3">Visie</h2>
+            <p class="inline">test1 tekst</p><br>
+            <h2 class="inline overonsh3">Doel</h2>
             <p class="inline ">test2 tekst</p>            
         </div>
 
         <div class="hidden-lg hidden-md hidden-sm col-xs-12 container_overons_gm">
-            <h2 class="overonsh3">test1 titel</h2>
+            <h2 class="overonsh3">Visie</h2>
             <p> test1 tekst</p><br>
-            <h2 class="overonsh3">test2 titel</h2>
+            <h2 class="overonsh3">Doel</h2>
             <p>test2 tekst</p>            
         </div>
     </div>
 
     <div class="full_width overons_landing2">
-        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Peoneer staat voor digitale marketing en innovatie</h2>
+        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Onze werkwijze: Partnership, Educator, Innovator</h2>
     </div> 
 
-    <div class="wrap_hor wrap_vert">
-        <h3>Geen standaard oplossingen</h3>
-        <h2>Nieuwe Puzzels</h2><br><br><br><br>
-        <figure><%= image_tag('overons.png', class: 'full_width') %></figure>
-    </div><br>
+    <div class="wrap_hor wrap_vert"><br><br>
+        <h3>Nieuwe Puzzels Vergen</h3>
+        <h2>Nieuwe Oplossingen</h2><br><br><br><br>
+        <figure><%= image_tag('overons.png', class: 'full_width') %></figure><br><br>
+    </div>
 
 </article>  
 
