--- a/app/views/pages/over_ons.html.erb
+++ b/app/views/pages/over_ons.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     <div class="full_width overons_landing2">
-        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Onze werkwijze: Partnership, Educator, Innovator</h2>
+        <h2 class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-centered white over_onsh2">Onze werkwijze: Partnership, Educator, Innovator, Cijfematige Analyse</h2>
     </div> 
 
     <div class="wrap_hor wrap_vert"><br><br>
