--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,10 +20,10 @@
         <div class="col-lg-6 col-md-7 col-sm-7 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0">
             <% if user_signed_in? %>
             <p class="pull-right"><%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "black" %>
-            <%= link_to 'Edit', edit_article_path(@article), class: "black" %>
+            <%= link_to 'Edit', edit_article_path(@article), class: "black" %></p>
             <% end %>
-
-            <%= link_to 'Back', articles_path, class: "black" %></p><br>
+            <br>
+            <p class="pull-right"><%= link_to 'Back', articles_path, class: "black" %></p>
                 
             
 
