--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -33,11 +33,12 @@
                     <hr class="article_show_hr">
 
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 npm">
-                <figure class="user_avatar"><%= image_tag('mijtest.JPG')%></figure>
+                <figure class="user_avatar"><%= image_tag('avatar.png',class: 'full_width')%></figure>
                 </div>
 
+
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 pull-right npm">
-                    <h6>by YSR <br><br>Twitter handle</h6>
+                    <h6>by Yugesh Raghoenath<br><br>Twitter handle</h6>
                 </div>     
 
 
