--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+
 <%= render 'shared/navbar/navbarNormal' %>
         <br><br><br>
         <br><br><br><br>
@@ -33,7 +34,7 @@
                     <hr class="article_show_hr">
 
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 npm">
-                <figure class="user_avatar"><%= image_tag('avatar.png',class: 'full_width')%></figure>
+                <figure class="user_avatar"><%= image_tag('avatar.jpg',class: 'full_width')%></figure>
                 </div>
 
 
