--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,7 +115,7 @@
     
             <figure class="affoe1 pull-left">
 
-            <%= image_tag('missie.gif', class: "full_size_img")%> 
+            <%= image_tag('missie.png', class: "full_size_img")%> 
             </figure>
 
          
