--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -6,7 +6,7 @@
         <div  class="overlay_black" style="opacity: 0.3">
         </div>  
         <div class="row container_home_landing place_middle">
-            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 smallhome">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-xs-10 smallhome">
                 <h2 class="white">Digitale<br><br><br><br>Transformatie</h2><br>
                 <p class="white titel_tekst">
                 Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
@@ -22,12 +22,7 @@
 <article class="container full_width bgt1 headlines_wrap">
 <h2 class="headlines">De wereld anno 2016</h2>
 
-<figure class="col-lg-10  col-md-12 col-sm-12 col-centered hidden-xs" "><br><br><br><%= image_tag('trends1_2.png', class: "full_size")%></figure>
-</div>
-
-<figure class="hidden-lg hidden-md hidden-sm"><<%= image_tag('trends22.png', class: "full_size")%></figure>
-
-
+<figure><%= image_tag('trends.png', alt: 'awesome', responsive: true, class: "full_size") %></figure>
 
 </article>
 
