--- a/app/views/pages/over_ons.html.erb
+++ b/app/views/pages/over_ons.html.erb
@@ -13,12 +13,13 @@
 
 
     <div class="full_width wrap_vert">
+        <h2 class=" inline overonsh3">Analytisch & Creatief</h2>
         <figure class="col-lg-4 col-md-5 col-sm-5 col-xs-12"><%=image_tag('creaana.png', class: "creaana")%>
         </figure>
 
         <div class="col-lg-7 col-lg-offset-1 col-md-7 col-sm-7 hidden-xs wrap_vert">
             <h2 class=" inline overonsh3">Doel</h2>
-            <p class="overonsp inline">Ons doel is onze klanten tot digitale leiders maken</p><br>
+            <p class="overonsp inline">Ons doel is onze partners tot digitale leiders maken</p><br>
             <h2 class=" inline overonsh3 ">Visie</h2>
             <p class="overonsp inline ">Onze visie is creatief, innovatief en op maat gemaakt.</p><br>
             <h2 class="inline overonsh3">Uitvoering</h2>
@@ -37,12 +38,12 @@
     </div>
 
     <div class="full_width overons_landing2">
-        <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 white over_onsh2 wrap_hor wrap_vert">Onze werkwijze: Partnership, Educator, Innovator.</h2>
+        <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 white over_onsh2 wrap_hor wrap_vert">Onze werkwijze: Partner, Educator, Innovator.</h2>
             <div class="clearfix"></div>        
     </div> 
 
     <div class="wrap_vert" style="width: 80%; margin: 0 auto;">
-        <h3>Nieuwe Puzzels Vergen</h3>
+        <h3>Nieuwe Puzzels</h3>
         <h2 style="line-height: 1em;">Nieuwe Oplossingen</h2>
         <figure class="full_width"><%= image_tag('overons.png', class: 'puzzel') %></figure>
         <div class="clearfix"></div>
