--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -9,8 +9,8 @@
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-xs-10 smallhome">
                 <h2 class="white">Digitale<br><br><br><br>Transformatie</h2><br>
                 <p class="white titel_tekst">
-                Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
-            </p>
+                Peonier is uw partner in uw tranformatie, innovatie en voorutigang. Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken.            
+                </p>
             </div>
 
 
@@ -20,13 +20,13 @@
 
 
 <article class="container full_width bgt1 headlines_wrap">
-<h2 class="headlines">De wereld anno 2016</h2>
+<h2 class="headlines">De wereld anno 2017</h2>
 
 <picture class="full_size">
   <source media="(max-width: 767px)" srcset="/assets/responsive_images_767/trends.png">
   <source media="(max-width: 991px)" srcset="/assets/responsive_images_991/trends.png">
   <source media="(max-width: 1999px)" srcset="/assets/responsive_images_1999/trends.png">
-  <img width="2568" height="878" alt="awesome" src="/assets/trends.png" class="full_size">
+  <img width="2568" height="878" alt="awesome" src="/assets/images/trends.png" class="full_size">
 </picture>
 
 </article>
@@ -40,7 +40,7 @@
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
                 <p class="text_shade">
-                De laatste jaren was er een record hoogte aantal faillissementen bereikt. Zelfs giganten als de V&D zijn gesneuveld door niet te innoveren. Toch zijn er voorbeelden de vinden van bedrijven die de markt hebben veroverd zoals Bol.com, Coolblue en Facebook. Door strategisch gebruik te maken van de nieuwe mogelijkheden zijn dergelijke bedrijven hun concurrentie te slim af. 
+                De laatste jaren was er een record hoogte aantal faillissementen bereikt. Giganten als V&D zijn gesneuveld door niet te innoveren. Toch zijn er voorbeelden van bedrijven die de markt hebben veroverd zoals Bol.com of Coolblue. Door strategisch gebruik te maken van de nieuwe mogelijkheden zijn dergelijke bedrijven hun concurrentie te slim af.                
                 </p>
             </div>
         </div>
@@ -52,7 +52,9 @@
             <h5 class="h3_diensten">Twee soorten Innovatie</h5><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
-            <p class="defining_digital_paragraph part_of_section text_shade">Door de tweets, video's en posts staat de communicatie tussen onderneming en klant op z´n kop. Wij helpen u diepere en langdurige relaties met uw klanten op te bouwen. Innoveren in het bedrijfsproces draait om inefficienties verwijderen. Wij onderzoeken welke processen geatomatiseerd kunnen worden en welke systemen verjaard zijn. Wij zoeken naar online kanalen om omzet te genereren. </p>          
+            <p class="defining_digital_paragraph part_of_section text_shade">De communicatie tussen onderneming en klant op z´n kop. Wij helpen u diepere en langdurige relaties met uw klanten op te bouwen. 
+            Innoveren in het bedrijfsproces draait om inefficienties verwijderen. Wij onderzoeken welke processen geatomatiseerd kunnen worden en welke systemen verjaard zijn.
+            </p>          
             </div>
         </div>
 
@@ -62,7 +64,7 @@
             <h5 class="h3_diensten"> uw Digitale Partner</h5><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
-                <p class="defining_digital_paragraph part_of_section text_shade">30% van de ondernemingen blijft achter door een gebrek aan kennis. Als uw partner zorgen wij dat u daar niet bij hoort. Door u te adviseren qua strategie en klantrelaties helpen wij u uw doelen te behalen. Bovendien bezitten wij expertise op het gebied van online of social media marketing campagnes. </p>            
+                <p class="defining_digital_paragraph part_of_section text_shade">30% van de ondernemingen blijft achter door een gebrek aan kennis. Als uw partner zorgen wij dat u daar niet bij hoort. Door ons advies op het gebied van strategie en klantrelaties behaalt u uw doelen.  </p>            
             </div>
         </div>
         
@@ -73,31 +75,32 @@
 </article>
 
 <article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt2" id="wrapper_business_trans">   
-    
+
         <div class="row" >
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 class="h3_diensten">DIGITALE TRANSFORMATIE</h3><br>
             <h4>Het nieuwe denken</h4>
-            <p class="diensten_tekst">Er zijn enorm veel nieuwe mogelijkheden in uw bedrijfsproces. Ook de manier waarop u traditioneel gezien waarde levert aan uw klanten is drastisch veranderd. Dit vergt echter een hernieuwde innovatieve denkwijze.</p>
+            <p class="diensten_tekst">De manier waarop u traditioneel gezien waarde levert aan uw klanten is drastisch veranderd. Dit vergt echter een hernieuwde innovatieve denkwijze.</p>
             </div>
 
         </div>
 
         <div class="row">
 
-            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
                 <li class="li_dienst">
-                <h5> Strategische Business Models</h5>
+                <h5>Online Business Models</h5>
+
                 <p class="diensten_tekst"> 
-                    Wij stroomlijnen uw online presence om uw strategische doelen te behalen. Wij brengen nieuwe manieren in kaart om uw klanten van waarde te voorzien en nieuwe kanalen om omzet te genereren. De nieuwe manier van branding en het gebruik van Social Media speelt hier een centrale rol in.
+                    Ontdek nieuwe manieren om omzet te genereren.
                 </p>
                 </li><br>
                 <li class="li_dienst">
                 <h5> Innovatieve bedrijfsprocessen</h5>
                 <p class="diensten_tekst">
-                    Wij verwijderen inefficienties uit uw bedrijfsproces door middel van automatisering en innovatie. 
+                    Stroomlijn uw bedrijfsproces door automatisering en innovatie. 
                 </p>
                 </li>
             </ul>
@@ -131,19 +134,19 @@
                 <li class="li_dienst">
                 <h5>Branding</h5>
                 <p class="diensten_tekst"> 
-                Alles wat u doet wordt voor altijd vastgelegd. Alles wat u doet kan wereldwijd bekeken worden. Uw identiteit is belangrijker dan ooit. Wij begeleiden u in het proces om dit op de juiste manier uit te dragen via de juiste kanalen. 
+                Vind uw CORE STORY. 
                 </p>
                 </li><br>
                 <li class="li_dienst">
                 <h5>Social Media Content</h5>
                 <p class="diensten_tekst"> 
-                Content genereren staat centraal in het nieuwe communiceren. Wij helpen u uw verhaal over te brengen. Wij adviseren u over wat geschikte content is en via welke kanalen u die content dient te verspreiden.
+                Leer wat goede content is, en hoe je die op de juiste manier verspreid. Facebook, Instagram, Youtube, Snapchat en meer.
                 </p>
                 </li><br>
                 <li class="li_dienst">
                 <h5>Customer Relationship Management</h5>
                 <p class="diensten_tekst"> 
-                Het doel is om een vertrouwensband op te bouwen met de klant. Dit gebeurt enerzijds door online feedback van klanten te verkrijgen. Anderzijds gebeurt dits door creatieve mogelijkheden aan te grijpen om uw klanten bij beslissingsprocessen van het bedrijf te betrekken. 
+                Zet de klant centraal in uw omni-channel strategie.
                 </p>
                 </li>
             </ul>
@@ -165,9 +168,9 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 class="h3_diensten">Online Marketing</h3><br>
-            <h4>Effectieve marketing</h4>
+            <h4>Effectieve Marketing</h4>
             <p class="diensten_tekst"> 
-            Wat doet u tijdens de reclames op tv? Leest u nog wel eens de advertentiies in de kranten? Waarschijnlijk hebben die manieren van adverteren uw aandacht niet meer. Wij zetten advertentiecampagnes op via het internet. 
+            Advertenties op tv of in de krant? Waarschijnlijk hebben die manieren van adverteren uw aandacht niet meer. Wij zetten advertentiecampagnes op die wel uw aandacht grijpen.            
             </p>
             </div>
 
@@ -180,13 +183,13 @@
                 <li class="li_dienst">
                 <h5> Social Media Advertenties</h5>
                 <p class="diensten_tekst"> 
-                De aandacht ligt tegenwoordig bij de mobiele telefoon. Wij zetten campagnes op die daar gebruik van maken.
+                Wij zetten Facebook, Instagram of YouTube campagnes op.
                 </p>
                 </li><br>
                 <li class="li_dienst">
-                <h5>SEO</h5>
+                <h5>Data Analyses</h5>
                 <p class="diensten_tekst"> 
-                Hoewel de klassieke manieren van SEO hun kracht beginnen te verliezen kunt u nog wel betere searchresults krijgen door een authority te worden. Wij helpen u daarbij.
+                Wij gebruiken data bij onze beslisvoering en evaluaties.
                 </p>
                 </li><br>
             </ul>
