--- a/app/views/shared/_normalfooter.html.erb
+++ b/app/views/shared/_normalfooter.html.erb
@@ -10,7 +10,7 @@
                     <%=link_to 'Diensten', services_path, class: "silverHover"%>
                </li>       
                 <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
-                    <%=link_to 'Blog', articles_path, class: "silverHover" %>
+                    <%=link_to 'Publicaties', articles_path, class: "silverHover" %>
                 </li>     
                 <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%=link_to 'Cases', stories_path, class: "silverHover" %>
