--- a/app/views/shared/navbar/_navbarNormal.html.erb
+++ b/app/views/shared/navbar/_navbarNormal.html.erb
@@ -13,7 +13,7 @@
                     <div class="hidden-xs">
                         <ul id="right" class="nav navbar-nav pull-right">
                             <li id="diensten" class="middle"><%=link_to 'Diensten', services_path%></li>
-                            <li id="leer" class="middle"><%=link_to 'Blog', articles_path %></li>
+                            <li id="leer" class="middle"><%=link_to 'Publicaties', articles_path %></li>
                             <li id="Verhalen" class="middle"><%=link_to 'Cases', stories_path %></li>
 
                             <li id="contact"><%= link_to "Contact", anchor: "wrapper_contact" %></li>
