--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -26,7 +26,7 @@
   <source media="(max-width: 767px)" srcset="/assets/responsive_images_767/trends.png">
   <source media="(max-width: 991px)" srcset="/assets/responsive_images_991/trends.png">
   <source media="(max-width: 1999px)" srcset="/assets/responsive_images_1999/trends.png">
-  <% image_tag('trends.png', class: "full_size")%>
+  <img width="2568" height="878" alt="awesome" src="/assets/trends.png" class="full_size">
 </picture>
 
 </article>
