--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -22,12 +22,10 @@
 <article class="container full_width bgt1 headlines_wrap">
 <h2 class="headlines">De wereld anno 2017</h2>
 
-<picture class="full_size">
-  <source media="(max-width: 767px)" srcset="/assets/responsive_images_767/trends.png">
-  <source media="(max-width: 991px)" srcset="/assets/responsive_images_991/trends.png">
-  <source media="(max-width: 1999px)" srcset="/assets/responsive_images_1999/trends.png">
-  <img alt="awesome" src="/assets/trends.png" class="full_size">
-</picture>
+<figure class="col-lg-10  col-md-12 col-sm-12 col-centered hidden-xs" "><br><br><br><%= image_tag('trends1.png', class: "full_size")%></figure>
+
+
+<figure class="hidden-lg hidden-md hidden-sm"><<%= image_tag('trends2.png', class: "full_size")%></figure>
 
 </article>
 
